# HW_Web_9

./: pyproject.toml
Scraping/: main.py  models.py
