[tool.poetry]
name = "hw-web-9"
version = "0.1.0"
description = ""
authors = ["Barskyi <137706923+Barskyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.23"
scrapy = "^2.11.0"
scrapyscript = "^1.1.5"
selenium = "^4.16.0"
playwright = "^1.40.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
